tempfile/async-trait/tests/ui/missing-async-in-trait.stderr
error[E0195]: lifetime parameters or bounds on associated function `method` do not match the trait declaration
  --> tests/ui/missing-async-in-trait.rs:12:14
   |
5  |     fn method();
   |              - lifetimes in impl do not match this associated function in trait
...
12 |     async fn method() {}
   |              ^^^^^^^^ lifetimes do not match associated function in trait
